--- a/style.css
+++ b/style.css
@@ -1,130 +1,267 @@
-/* змінні */
-:root{
-    --hover-color: #03A9F4;
-    --navigation-color:#7D7D7D;
-    --name-color:#B4AD9E;
-    --text-color:#626262;
+/*.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: skyblue;
+    opacity: 1;
 }
-/* прибирання зайвих символів */
-
-/*
-Шрифти
-font-family: 'Playfair Display', serif;
-font-family: 'Ubuntu', sans-serif; */
-
-ul{
-    list-style: none;
-    
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
 }
-
-a{
-    text-decoration: none;
+.no-scroll{
+    overflow: hidden;
 }
-
-body{
-    box-sizing: content-box;
-    font-family: 'Playfair Display', serif;
-}
-
-h1{
-    display: none;
-}
-.container{
-    width: 936px;
-    margin: 0 auto;
-    padding: 0 15px;
-    
-}
-
-/* шапка */
-.header{
-    
-    padding-top: 71px;
-}
-
-.header-nav{
-
-}
-
-.header-list{
-    width: 555px;
-    margin: 0 auto;
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: blueviolet;
+    padding: 20px;
+    border: 3px solid blue;
+    border-radius: 40px;
+} 
+form{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+input{
+    margin-bottom: 5px;
+    border-radius: 40px;
+}
+.btn{
+    color: rgb(36, 38, 62);
+    border-radius: 40px;
+    width: 50px;
+}
+.checkbox:checked{
+    outline: 2px solid greenyellow;
 }
 
-.header-link{
-    color: var(--navigation-color);
-    text-transform: uppercase;
-    font-size: 14px;
-}
-/* додав ховери(посиніння при наводці) */
-.header-link:hover, 
-.header-link:focus
-{
-    color: var(--hover-color);
-}
 
-/* головний контент */
 
-.main{
-    padding-top: 92px;
-    padding-bottom: 66px;
+
+.box{
+    width: 300px;
+    height: 300px;
+    background-color: aqua;
+    position: relative;
 }
-
-.title,
-.card-title{
-    color: var(--text-color);
-    margin-bottom: 40px;
-    margin-top: 32px;
-    font-size: 30px;
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    transition: transform 500ms ease;
+}
+.box:hover .overlay{
+    background-color: chartreuse;
+    transform: translateY(0%);
 }
 
-.wrap{
 
+html{
+    scroll-behavior: smooth;
 }
-
-.card-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+#one{
+    height: 1200px;
+    background-color: aquamarine;
 }
+#two{
+    height: 1200;
+    background-color: blueviolet;
+}*/
 
-.card-item{
-    width: 420px;
-    margin-bottom: 130px;
-}
 
-.card-img{
-    width: 420px;
-    height: 280px;
-    margin-bottom: 32px;
-}
-
-.card-name{
-    color: var(--name-color);
-    text-transform: uppercase;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-}
-
-.classparagraf{
-    color: var(--text-color);
-    font-size: 14px;
-}
-
-.wrap-btn{
+/*body{
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.box{
+    width: 250px;
+    height: 250px;
+    background-color: aqua;
+    border-radius: 20px;
+    border: 2px solid red;
+    box-shadow: 5px 10px 5px gray;
+    transition-property: background-color;
+    transition-duration: 2s;
+}
+.box:hover{
+    background-color: yellow;
+}*/
+
+/*.wrap{
+    position: relative;
+    width: 500px;
+    height: 500px;
+    background-color: blue;
 }
 
-.button{
-    color: var(--text-color);
-    border: solid var(--text-color) 1px;
-    padding: 20px 48px;
-    font-size: 14px;
-    height: 60px;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 400;
+.box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
+    height: 250px;
+    background-color: darkcyan;
+    transition-property: transform;
 }
+
+.box:hover{
+    transform: translate(-50%, -50%) scale(1.5) rotate(180deg);
+    transition-duration: 3s;
+}*/
+
+
+
+
+
+
+
+/*.btn{
+    position: relative;
+    overflow: hidden;
+    display: inline-flex;
+    align-items: center;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 30px;
+    color: rgb(253, 254, 254);
+    background-color: yellow;
+    cursor: pointer;
+    font-weight: 700;
+
+
+}
+
+.btn:hover,
+.btn:focus{
+    background-color: pink;
+    color: black;
+}
+
+.btn::before,
+.btn::after{
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-size: container;
+}
+.btn::before{
+    background-image: ;
+    margin-right: 50px;
+}
+.btn::after{
+    position: absolute;
+    top: 50%;
+    bottom: 50px;
+    background-image: ;
+    transform: translateY(calc(-100% + 35px));
+}
+
+.btn:hover::before,
+.btn:focus::before{
+    transform: translateY(-35px);
+}
+
+.btn:hover::after,
+.btn:focus::after{
+    transform: translateY(-50%);
+}*/
+
+
+
+/*.menu{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+.menu-link{
+    position: relative;
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+}
+.menu-link::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 6px;
+    background-color: coral;
+    opacity: 0
+}
+.menu-link:hover::after{
+    opacity: 1;
+}*/
+
+
+/*.content{
+    padding: 50px;
+}
+.box{
+    width: 100px;
+    height: 100px;
+    background-color: darkcyan;
+    border-radius: 50%;
+    position: relative;
+    left: 0;
+    animation-name: changecolor;
+    animation-duration: 3x;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+.content:hover .box{
+    animation-play-state: paused;
+}
+
+@keyframes chengecolor{
+    0%{
+        left: 0;
+        background-color: orangered;
+    }
+    50%{
+        border-radius: 0;
+        background-color: aqua;
+    }
+    100%{
+        left: 300px;
+        background-color: teal;
+    }
+}*/
+
+
+
+img{
+    animation-name: spin;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+
